modified some description in notebook

--- a/youtube_api.ipynb
+++ b/youtube_api.ipynb
@@ -19,7 +19,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "fma5Ky3PZmj8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "lgLqC98GZpyd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "aNJiH3S0Zs8q"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
       "metadata": {
         "id": "46lMvMe1ZYTF"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "-sxKNRYtJzaP"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -253,7 +253,7 @@
         "id": "_XVPuSA3KrAg",
         "outputId": "947ef4ae-ccb3-453c-9c04-dd0e9bbb0a41"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +464,7 @@
         "id": "pc1BRRYrK06K",
         "outputId": "04dc0994-6ac3-42c3-95d1-b071049920b5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,7 +506,7 @@
         "id": "O9bUWeNUNAq-",
         "outputId": "51431e94-a59a-4130-e40c-f3b2ee964c54"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -544,7 +544,7 @@
         "id": "RcVkGmf5Brc9",
         "outputId": "f06adbfb-dd7b-4648-edcc-01cbf79003dc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -570,33 +570,6 @@
     {
       "cell_type": "code",
       "source": [
-        "channel_data.loc[channel_data[\"channelName\"]==\"Jeremy Ethier\", \"playlistId\"]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Z1PYxfdUMmsA",
-        "outputId": "452a8a66-fa23-4e09-965a-d46ff8a1b7d4"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3    UUERm5yFZ1SptUEU4wZ2vJvw\n",
-              "Name: playlistId, dtype: object"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Create a dataframe with video statistics and comments from all channels\n",
         "\n",
         "video_df = pd.DataFrame()\n",
@@ -614,7 +587,7 @@
       "metadata": {
         "id": "J2d5hg2sFoUF"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -630,7 +603,7 @@
         "id": "TWqEmi9SNx5n",
         "outputId": "5fed52fc-2f7c-4f48-854a-0763b1c3f8af"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1026,13 +999,13 @@
       "metadata": {
         "id": "rY8FWYH9QGwL"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Data pre-processing"
+        "## Data pre-processing"
       ],
       "metadata": {
         "id": "xslnT3fOZ64U"
@@ -1050,7 +1023,7 @@
         "id": "Zdrv0DfGZ5yD",
         "outputId": "37f1b35f-5795-4e6f-bb2b-2a25b195308c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1089,7 +1062,7 @@
         "id": "Yt2pgB8iZ_Yj",
         "outputId": "eb656468-0a4b-48a9-a674-b3a516e77a42"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1126,7 +1099,7 @@
       "metadata": {
         "id": "yAVTCHczaBQv"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1139,7 +1112,7 @@
       "metadata": {
         "id": "ghakIM0faCyY"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1152,7 +1125,7 @@
       "metadata": {
         "id": "Q7btW9VraGWM"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1164,7 +1137,7 @@
       "metadata": {
         "id": "NPGoBwdFfK3K"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1176,7 +1149,7 @@
       "metadata": {
         "id": "gUxz3dqaXXdP"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1192,7 +1165,7 @@
         "id": "thWW_XFsho4n",
         "outputId": "8db3008a-371e-4885-ad1a-490fc264d045"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1495,7 +1468,7 @@
       "metadata": {
         "id": "0vgE_0_4-ItT"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1510,7 +1483,7 @@
         "id": "1RKgltlUX3kc",
         "outputId": "15aa1a95-0e46-4cfd-b383-3d73ff7acf27"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1557,7 +1530,7 @@
         "id": "ufTufMLbh2h-",
         "outputId": "c0e9ef76-fe12-4487-9c35-ea96a1342e37"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1613,7 +1586,7 @@
         "id": "2tAvd_Xy-jq0",
         "outputId": "c35a04b1-22fb-4b25-872d-ded2fb19c0cd"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1659,7 +1632,7 @@
         "id": "TrlrepkVCfkH",
         "outputId": "e754f886-6cce-4418-db58-d741a2a7c597"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1698,7 +1671,7 @@
         "id": "fgFght6AZ0a4",
         "outputId": "251f2aa1-f7d8-4f4e-87e1-c9b382135b0e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1744,7 +1717,7 @@
         "id": "Wbk6WngMa9pg",
         "outputId": "ed5e1484-caff-4f41-8b3a-74a14c4be8dc"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1789,7 +1762,7 @@
         "id": "nujo5DJyjLpy",
         "outputId": "422a9a7b-a187-4a24-a49d-8506b93722c7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1834,7 +1807,7 @@
         "id": "ZGUZk-MzExIW",
         "outputId": "d6c6947e-25f6-43ff-fe6b-2d192a944318"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1870,7 +1843,7 @@
         "id": "m2sR8fd1cDM_",
         "outputId": "9630ef20-4ae8-4ddd-dc9c-7ada27f90a5a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1919,7 +1892,7 @@
         "id": "EXcbqrsmL7I7",
         "outputId": "56ab60c8-86d2-4afd-9892-76c683f2c9b3"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
